--- a/style.css
+++ b/style.css
@@ -1,1 +1,36 @@
-
+<table style="width:100%">
+  <tr>
+    <th>V-Bucks</th>
+    <th>Price</th>
+  
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>Three Pennies and A Wet Sock</td>
+  
+   
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>Two Wet Socks</td>
+    
+  </tr>
+  <tr>
+  <td>100</td>
+  <td>Eight and Three Quarters Nickels</td>
+  </tr>
+  <tr>
+  <td>250</td>
+  <td>Four Origami Cranes Made Out Of One Dollar Bills</td>
+  <tr>
+    <td>500</td>
+    <td>Two Five Dollar Fill-Ups KFC</td>
+    </tr>
+    <tr>
+  <td>1,000</td>
+  <td>First Born Child</td>
+  </tr>
+</table>
+table, th, td {
+  border: 1px solid black;
+}
